Fix year click shift bug

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,12 +3,15 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
-  width: 100vw;
+  width: 100%;
 }
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+main {
+  position: absolute;
 }
 article,
 aside,
